test/types/records/casts/castToNonType.good
castToNonType.chpl:3: error: illegal cast from int(64) to R
