test/types/records/casts/castToNonType.chpl
record R { }

var a = 1:R;
